--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.4.0",
